--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,3 +7,52 @@
 4) Bege (#8C7158)
 5) Creme (#BFAE9F)
 */
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+
+}
+
+body, html {
+    background-color: #8C7158;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+
+    background-color: #F2F2F2;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #4b2f09e1;
+}
+
+section#login > div#imagem {
+    display: block;
+    background:  #8C7158 url(../imagens/welcome.jpg) no-repeat;
+    background-size: cover;
+    background-position-x: 35%;
+    height: 200px;
+
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
