--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,6 +41,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px #4b2f09e1;
+
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
