--- a/estilos/style.css
+++ b/estilos/style.css
@@ -59,3 +59,12 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 }
+
+section#login > div#formulario h1 {
+    text-align: center;
+    font-size: 2em;
+}
+
+section#login > div#formulario p {
+    font-size: 0.8em;
+}
