--- a/estilos/style.css
+++ b/estilos/style.css
@@ -62,7 +62,7 @@ section#login > div#formulario {
 
 section#login > div#formulario h1 {
     text-align: center;
-    font-size: 2em;
+    margin-bottom: 10px;
 }
 
 section#login > div#formulario p {
