--- a/estilos/style.css
+++ b/estilos/style.css
@@ -71,5 +71,55 @@ section#login > div#formulario p {
 
 span.material-icons {
     color: #4B2F09;
-    padding: 10px 10px 0px 10px;
+}
+
+form > div.campo {
+    background-color: #634f3d;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #BFAE9F;
+    color: #634f3d;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #8C7158;
+    color: #dfcbba;
+
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #ffffff;
+    padding-top: 5px;
+    margin-top: 7px;
+    color: #8C7158;
+    border: 1px solid #634f3d;
+    border-radius: 5px;
+    text-decoration: none;
+
+}
+
+form > a.botao:hover {
+    background-color: #eedac9;
+}
+
+form > a.botao span {
+    font-size: 1.2em;
 }
