--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -18,6 +18,7 @@ Grandes telas: acima de 1200px.
 
     section#login {
         width: 90vw;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -39,6 +40,8 @@ Grandes telas: acima de 1200px.
 
     section#login {
         width: 950px;
+        height: 350px;
+
     }
 
     section#login > div#imagem {
